--- a/express/code/styles/styles.css
+++ b/express/code/styles/styles.css
@@ -1548,7 +1548,7 @@ body:not(.blog) main #hero:not(:has(.hero-bg)) p {
   background-color: var(--color-black);
 }
 
-.video-controls-wrapper:focus {
+.video-controls-wrapper:focus-visible {
   outline: 2px solid #1473e6;
   outline-offset: 2px;
 }
