--- a/express/code/blocks/discover-cards/discover-cards.css
+++ b/express/code/blocks/discover-cards/discover-cards.css
@@ -12,6 +12,20 @@ main .section .discover-cards {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-image:
+      linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 20%),
+      linear-gradient(to top, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 20%);
+}
+
+.discover-cards .background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+    pointer-events: none;
 }
 
 .discover-cards .sub-header {
@@ -214,7 +228,7 @@ main .section .discover-cards {
     }
 }
 
-@media (min-width: 900px) { 
+@media (min-width: 900px) {
   .discover-cards.flip .center-title {
     font-size: var(--heading-font-size-l);
   }
@@ -330,7 +344,7 @@ main .section .discover-cards {
   transform: rotateY(180deg);
 }
 
-.discover-cards.flip .flip-card-front, 
+.discover-cards.flip .flip-card-front,
 .discover-cards.flip .flip-card-back {
   font-size: var(--heading-font-size-s);
   text-align: left;
