--- a/express/code/blocks/link-list/link-list.css
+++ b/express/code/blocks/link-list/link-list.css
@@ -11,6 +11,25 @@
   margin: 0 auto;
 }
 
+/* Mobile: allow text link to be visible outside carousel */
+@media (max-width: 599px) {
+  main .section .link-list-wrapper:has(.link-list.link-text),
+  main .section.modular-search .link-list-wrapper:has(.link-list.link-text) {
+    padding: 0;
+    margin: 0;
+  }
+
+  .section .link-list.link-text {
+    overflow: visible;
+  }
+  
+  .section .link-list.link-text .text-link-mobile {
+    text-align: left;
+    margin-top: var(--spacing-300);
+  }
+}
+
+
 .section .link-list-wrapper .link-list.narrow {
   max-width: 850px;
 }
@@ -339,16 +358,4 @@
 
 .section .link-list.link-text p.button-container a:not(.text-link):hover {
   background-color: #e0e0e0;
-}
-
-/* Mobile: allow text link to be visible outside carousel */
-@media (max-width: 599px) {
-  .section .link-list.link-text {
-    overflow: visible;
-  }
-  
-  .section .link-list.link-text .text-link-mobile {
-    text-align: left;
-    margin-top: var(--spacing-300);
-  }
 }
