--- a/express/code/blocks/template-x-carousel-toolbar/template-x-carousel-toolbar.css
+++ b/express/code/blocks/template-x-carousel-toolbar/template-x-carousel-toolbar.css
@@ -44,7 +44,7 @@
   grid-template-rows: auto auto;
   align-items: center;
   gap: var(--spacing-400);
-  margin-bottom: 48px;
+  margin-bottom: var(--spacing-600);
 }
 
 .template-x-carousel-toolbar.search-bar .centered-heading {
