--- a/express/code/blocks/standalone-search-bar/standalone-search-bar.css
+++ b/express/code/blocks/standalone-search-bar/standalone-search-bar.css
@@ -1,7 +1,9 @@
+.standalone-search-bar-wrapper {
+  margin-bottom: var(--spacing-400);
+}
+
 .standalone-search-bar {
     max-width: none;
-    padding: 0 0 var(--spacing-500) 0;
-    margin-bottom: var(--spacing-200);
     display: flex;
     flex-direction: column;
     align-items: center;
