align template carousel toolbar heading to center on tablet and set font-size to 20px per figma

--- a/express/code/blocks/template-x-carousel-toolbar/template-x-carousel-toolbar.css
+++ b/express/code/blocks/template-x-carousel-toolbar/template-x-carousel-toolbar.css
@@ -483,6 +483,8 @@
   }
   .template-x-carousel-toolbar.search-bar .centered-heading {
     width: unset;
+    text-align: center;
+    font-size: var(--heading-font-size-xs)
   }
   .template-x-carousel-toolbar .toolbar {
     padding-top: 0;
