setting up font-sizes for text above template carousel across surfaces

--- a/express/code/blocks/template-x-carousel-toolbar/template-x-carousel-toolbar.css
+++ b/express/code/blocks/template-x-carousel-toolbar/template-x-carousel-toolbar.css
@@ -484,7 +484,6 @@
   .template-x-carousel-toolbar.search-bar .centered-heading {
     width: unset;
     text-align: center;
-    font-size: var(--heading-font-size-xs)
   }
   .template-x-carousel-toolbar .toolbar {
     padding-top: 0;
@@ -493,3 +492,11 @@
     justify-content: space-between;
   }
 }
+
+@media (min-width: 1200px) {
+  .template-x-carousel-toolbar.search-bar .centered-heading {
+    font-size: var(--body-font-size-xl);
+  }
+}
+
+
