--- a/express/code/styles/styles.css
+++ b/express/code/styles/styles.css
@@ -14,6 +14,7 @@
   --color-gray-200: #e8e8e8;
   --color-gray-300: #d4d4d4;
   --color-gray-300-variant: #dadada;
+  --color-gray-325: #D5D5D5;
   --color-gray-400: #b6b6b6;
   --color-gray-400-variant: #C6C6C6;
   --color-gray-500: #909090;
@@ -23,6 +24,7 @@
   --color-gray-800: #242424;
   --color-gray-800-variant: #292929;
   --color-gray-900: #222;
+  --color-gray-950: #131313;
   --color-blue-600: #0066CC;
   --color-black: #000;
   --color-content-neutral: #222222;
