--- a/express/code/blocks/print-product-detail/print-product-detail.css
+++ b/express/code/blocks/print-product-detail/print-product-detail.css
@@ -747,6 +747,24 @@ main .section .pdpx-drawer-description {
   .pdpx-savings-text {
     text-align: end;
   }
+  .pdpx-global-container .drawer {
+    --drawer-padding: var(--spacing-400);
+    --drawer-body-gap: var(--spacing-400);
+    bottom: initial;
+    top: 0;
+    right: 0;
+    left: initial;
+    width: 50%;
+    height: 100%;
+    border-radius: initial;
+    transform: translateX(0);
+  }
+  .pdpx-global-container .drawer.hidden {
+    transform: translateX(100%);
+  }
+  .pdpx-global-container .drawer-body .pdpx-drawer-title-row .pdpx-drawer-title {
+    font-size: var(--body-font-size-xl);
+  }
 }
 /*WIDE-SCREEN*/
 @media (min-width: 1680px) {
@@ -761,5 +779,163 @@ main .section .pdpx-drawer-description {
     --figma-section-padding-medium: var(--figma-spacing-700);
     --figma-section-padding-large: var(--figma-spacing-800);
     --figma-section-padding-x-large: var(--figma-spacing-900);
+  }
+}
+
+
+
+
+
+
+.pdpx-global-container .drawer {
+  --drawer-padding: var(--spacing-300);
+  --drawer-body-gap: var(--spacing-200);
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  z-index: 102;
+  border-radius: 16px 16px 0 0;
+  background-color: var(--color-white);
+  height: 600px;
+  width: 100%;
+  transform: translateY(0);
+  transition: transform 300ms ease;
+  display: flex;
+  flex-direction: column;
+}
+
+.pdpx-global-container .drawer.hidden {
+  transform: translateY(100%);
+}
+
+.pdpx-global-container .drawer-head {
+  display: flex;
+  position: sticky;
+  top: 0;
+  justify-content: space-between;
+  border-radius: 16px 16px 0 0;
+  border-bottom: 1px solid #D5D5D5;
+  padding: var(--drawer-padding);
+  background-color: var(--color-white);
+}
+
+.pdpx-global-container .drawer-head-label {
+  font-weight: 700;
+}
+
+.pdpx-global-container .drawer-head button {
+  cursor: pointer;
+  background: none;
+  border: none;
+}
+
+.pdpx-global-container .drawer-body {
+  padding: var(--spacing-300) var(--drawer-padding) 0 var(--drawer-padding);
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  overflow: auto;
+  scrollbar-width: thin;
+}
+
+.pdpx-global-container .drawer-body img.hero {
+  width: 100%;
+  height: auto;
+  max-height: 400px;
+  object-fit: contain;
+  border-radius: 8px;
+}
+
+.pdpx-global-container .drawer-body .pdpx-drawer-title-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.pdpx-global-container .drawer-body .pdpx-drawer-title-row .pdpx-drawer-title {
+  font-weight: 700;
+}
+
+.pdpx-global-container .drawer-body .pdpx-drawer-title-row .recommended {
+  font-size: var(--body-font-size-xs);
+  color: white;
+  padding: 4px 9px;
+  line-height: 1.3;
+  border-radius: 7px;
+  background-color: #3B63FB;
+}
+
+.pdpx-global-container .drawer-body .label-row {
+  display: flex;
+  gap: var(--spacing-100);
+}
+
+.pdpx-global-container .drawer-body .label-pill {
+  border-radius: 8px;
+  padding: 4px var(--spacing-100);
+  background-color: #F3F3F3;
+  display: flex;
+  align-items: center;
+  font-size: var(--body-font-size-s);
+  gap: 4px;
+}
+
+.pdpx-global-container .drawer-body .icon-checkmark {
+  /* TODO: find proper icon */
+  background-color: black;
+  display: block;
+  border-radius: 50%;
+  height: 8px;
+  width: 8px;
+  padding: 3px;
+  margin-right: 4px;
+}
+
+.pdpx-global-container .drawer-body .description {
+  font-size: var(--body-font-size-s);
+}
+
+.pdpx-global-container .drawer-foot {
+  display: flex;
+  border-top: 1px solid #D5D5D5;
+  padding: var(--spacing-200) var(--drawer-padding);
+  justify-content: space-between;
+  background-color: var(--color-white);
+  flex-shrink: 0;
+}
+
+
+.pdp-curtain {
+  z-index: 101;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgb(50 50 50 / 80%);
+}
+
+.pdp-curtain.hidden {
+  display: none;
+}
+
+@media (min-width: 1200px) {
+  .pdpx-global-container .drawer {
+    --drawer-padding: var(--spacing-400);
+    --drawer-body-gap: var(--spacing-400);
+    bottom: initial;
+    top: 0;
+    right: 0;
+    left: initial;
+    width: 50%;
+    height: 100%;
+    border-radius: initial;
+    transform: translateX(0);
+  }
+  .pdpx-global-container .drawer.hidden {
+    transform: translateX(100%);
+  }
+  .pdpx-global-container .drawer-body .pdpx-drawer-title-row .pdpx-drawer-title {
+    font-size: var(--body-font-size-xl);
   }
 }
