--- a/express/code/blocks/discover-cards/discover-cards.css
+++ b/express/code/blocks/discover-cards/discover-cards.css
@@ -14,7 +14,8 @@ main .section .discover-cards {
     background-repeat: no-repeat;
     background-image:
       linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 20%),
-      linear-gradient(to top, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 20%);
+      linear-gradient(to top, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 20%),
+      url('/express/code/blocks/discover-cards/img/cards-bg-large.webp');
 }
 
 .discover-cards .background-image {
