--- a/express/code/blocks/print-product-detail/print-product-detail.css
+++ b/express/code/blocks/print-product-detail/print-product-detail.css
@@ -458,7 +458,7 @@ main .section .pdpx-drawer-description {
   }
   .pdpx-drawer-foot-select-button {
     color: var(--color-white);
-    background-color: #5258E4;
+    background-color: #5258e4;
     padding: var(--spacing-200) var(--spacing-400);
     border-radius: 24px;
     border: none;
@@ -468,8 +468,54 @@ main .section .pdpx-drawer-description {
     cursor: pointer;
   }
 }
+.pdpx-printing-process-options-container {
+  display: flex;
+  flex-direction: column;
+  gap: var(--figma-spacing-300);
+  .pdpx-printing-process-option-container {
+    display: flex;
+    flex-direction: row;
+    gap: var(--figma-spacing-500);
+    .pdpx-printing-process-option-image-container {
+      max-width: 40%;
+      .pdpx-printing-process-option-image {
+        aspect-ratio: 1/1;
+        object-fit: cover;
+        object-position: center;
+        border-radius: 8px;
+      }
+    }
+    .pdpx-printing-process-option-info-container {
+      display: flex;
+      flex-direction: column;
+      gap: var(--figma-spacing-300);
 
-
+      .pdpx-printing-process-option-info-title {
+        font-size: 20px;
+        font-weight: 700;
+      }
+      p.pdpx-printing-process-option-info-description {
+        font-size: 14px;
+        font-weight: 400;
+        color: #222;
+        line-height: 1.3;
+        margin: 0;
+        padding: 0;
+      }
+      .pdpx-printing-process-option-color-lockup {
+        display: flex;
+        align-items: center;
+        padding: var(--figma-spacing-75) var(--figma-spacing-100);
+        border-radius: 8px;
+        background-color: #f3f3f3;
+        font-size: var(--body-font-size-s);
+        width: fit-content;
+      }
+    }
+    
+  }
+}
+/* END DRAWER*/
 
 /* MINI PILL SELECTOR */
 .pdpx-pill-selector-label-compare-link {
@@ -762,7 +808,10 @@ main .section .pdpx-drawer-description {
   .pdpx-global-container .drawer.hidden {
     transform: translateX(100%);
   }
-  .pdpx-global-container .drawer-body .pdpx-drawer-title-row .pdpx-drawer-title {
+  .pdpx-global-container
+    .drawer-body
+    .pdpx-drawer-title-row
+    .pdpx-drawer-title {
     font-size: var(--body-font-size-xl);
   }
 }
@@ -781,11 +830,6 @@ main .section .pdpx-drawer-description {
     --figma-section-padding-x-large: var(--figma-spacing-900);
   }
 }
-
-
-
-
-
 
 .pdpx-global-container .drawer {
   --drawer-padding: var(--spacing-300);
@@ -814,7 +858,7 @@ main .section .pdpx-drawer-description {
   top: 0;
   justify-content: space-between;
   border-radius: 16px 16px 0 0;
-  border-bottom: 1px solid #D5D5D5;
+  border-bottom: 1px solid #d5d5d5;
   padding: var(--drawer-padding);
   background-color: var(--color-white);
 }
@@ -862,7 +906,7 @@ main .section .pdpx-drawer-description {
   padding: 4px 9px;
   line-height: 1.3;
   border-radius: 7px;
-  background-color: #3B63FB;
+  background-color: #3b63fb;
 }
 
 .pdpx-global-container .drawer-body .label-row {
@@ -873,7 +917,7 @@ main .section .pdpx-drawer-description {
 .pdpx-global-container .drawer-body .label-pill {
   border-radius: 8px;
   padding: 4px var(--spacing-100);
-  background-color: #F3F3F3;
+  background-color: #f3f3f3;
   display: flex;
   align-items: center;
   font-size: var(--body-font-size-s);
@@ -897,13 +941,12 @@ main .section .pdpx-drawer-description {
 
 .pdpx-global-container .drawer-foot {
   display: flex;
-  border-top: 1px solid #D5D5D5;
+  border-top: 1px solid #d5d5d5;
   padding: var(--spacing-200) var(--drawer-padding);
   justify-content: space-between;
   background-color: var(--color-white);
   flex-shrink: 0;
 }
-
 
 .pdp-curtain {
   z-index: 101;
@@ -935,7 +978,10 @@ main .section .pdpx-drawer-description {
   .pdpx-global-container .drawer.hidden {
     transform: translateX(100%);
   }
-  .pdpx-global-container .drawer-body .pdpx-drawer-title-row .pdpx-drawer-title {
+  .pdpx-global-container
+    .drawer-body
+    .pdpx-drawer-title-row
+    .pdpx-drawer-title {
     font-size: var(--body-font-size-xl);
   }
 }
